Regression: Dragging an Nla strip causes a crash #109787

Closed
opened 2023-07-06 16:34:55 +02:00 by Christoph Lendenfeld · 5 comments

System Information
Operating system: Linux
Graphics card: Nvidia 3070

Blender Version
Broken: latest master
Worked: 3.6
Caused by 4268ac0ed9

Short description of error
When finishing dragging a strip in the NLA blender throws a segfault

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • open the attached blend file
  • push down the action on the armature
  • drag it around

Please note that I was only able to reproduce this issue with this file. In a fresh scene the same steps seem to work.
the issue occurs on transform_convert_nla.c/259

**System Information** Operating system: Linux Graphics card: Nvidia 3070 **Blender Version** Broken: latest master Worked: 3.6 Caused by 4268ac0ed96bfacf0ad093be2e593208d64c8fcb **Short description of error** When finishing dragging a strip in the NLA blender throws a segfault **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). * open the attached blend file * push down the action on the armature * drag it around Please note that I was only able to reproduce this issue with this file. In a fresh scene the same steps seem to work. the issue occurs on transform_convert_nla.c/259
Christoph Lendenfeld added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2023-07-06 16:34:56 +02:00
Christoph Lendenfeld added this to the Animation & Rigging project 2023-07-06 16:34:58 +02:00
Member

yes, can confirm the crash :)

yes, can confirm the crash :)
Member

Caused by 4268ac0ed9
@nrupsis ^

Caused by 4268ac0ed96bfacf0ad093be2e593208d64c8fcb @nrupsis ^
Pratik Borhade changed title from Dragging an Nla strip causes a crash to Regression: Dragging an Nla strip causes a crash 2023-07-07 07:47:03 +02:00
Member

Can also confirm crash. Will look into it.

Can also confirm crash. Will look into it.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-13 16:10:08 +02:00
Member

Guess we can safely backport the fix to LTS, added now: #109399

Guess we can safely backport the fix to LTS, added now: #109399
Member

@PratikPB2123 NLA vertical reordering was landed in 4.0. No need to backport

@PratikPB2123 NLA vertical reordering was [landed in 4.0](https://wiki.blender.org/wiki/Reference/Release_Notes/4.0/Animation_Rigging). No need to backport
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109787
No description provided.