Fix #109787: filter out non Fcurve channels from nlatrack_truncate_temporary_tracks

## Overview

Adding ANIMFILTER_FCURVESONLY  filter to  nlatrack_truncate_temporary_tracks to fix index out of bounds crash.

Pull Request: https://projects.blender.org/blender/blender/pulls/110032